@@ -10,6 +10,7 @@ PHP 7.3 INTERNALS UPGRADE NOTES
   g. zend_get_parameters()
   h. zend_register_persistent_resource()
   i. RAND_RANGE()
+  j. cast_object() with _IS_NUMBER
 
 2. Build system changes
   a. Unix build system changes
@@ -85,6 +86,10 @@ PHP 7.3 INTERNALS UPGRADE NOTES
 
   i. The RANGE_RANGE() macro has been removed. php_mt_rand_range() should be
      used instead.
+
+  j. The cast_object() object handler now also accepts the _IS_NUMBER type. The
+     handler should return either an integer or float value in this case,
+     whichever is more appropriate.
 
 ========================
 2. Build system changes
